# rust-platformer

./: Cargo.toml
src/: game_loop.rs  main.rs
src/engine/: constants.rs  game_loop.rs  game_state.rs  input.rs  mod.rs  renderer.rs
src/engine/renderer/: instance.rs  mod.rs  pipeline.rs  renderer.rs  texture.rs  tile.rs  uniform.rs  vertex.rs
src/engine/renderer/shaders/: shader.wgsl
src/shaders/: rectangle.wgsl
